changed extension to photo and character colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Buon Compleanno amore mio.
       </label>
       <button class="button">
-        <a class="linkKoko" onclick="downloadPDF()">
+        <a class="downloadPdf" onclick="downloadPDF()">
           Scopri il tuo regalo
         </a>
       </button>
